--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,3 @@
 sources:
-  "cweb-latex.doc.tar.xz": 5345c8e90e3ffd9bdbe74a3dc8e7a5de3cdedda5
-  "cweb-latex.source.tar.xz": 6a342156dbfef613af442694ea6c0d419d365e52
-  "cweb-latex.tar.xz": 4bed5ca2b53e23439d5ba25f62d070e21a9092f3
+  cweb-latex.doc.tar.xz: efb38e26bf403cd640ac902d7a003fc597f2c6b7
+  cweb-latex.tar.xz: b5a0af7b437aeeb86f5f8d8e9acc1f3e811be746
