--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  cweb-latex.doc.tar.xz: 6af234ca8d8dedcaa3a3f07f54535f0c983ccfcc
-  cweb-latex.tar.xz: 88bbb6e2aad5f8c5776d936a96e32fc99119425c
+  cweb-latex.doc.r28878.tar.xz: 2b218f7fd5f5bc31a81df6bfc85ffbcf2aa57f4a
+  cweb-latex.r28878.tar.xz: 3ca32a81f23e1e636da529a6df85a690446eb913
